# mkl-dnn

./: CMakeLists.txt
binding/: CMakeLists.txt  binding.cpp
binding/src/: binding.cpp
binding/test/: index.html  simple_net.js
cmake/: MKL.cmake  OpenMP.cmake
examples/: simple_net.c
src/: CMakeLists.txt
src/cpu/: cpu_engine.cpp  cpu_reorder.cpp
